# Spectral_solver

./: .gitignore  Benchmark.md  CMAKE_OPTIONS.md  CMakeLists.txt  METHOD_AND_CODE.md  compare_taylor_green.py  doc.md  flake.nix  perf_to_speedscope.py
cmake/: CheckFlupsCuda.cmake
cpp_tests/: spectral_ns_tests.cpp
scripts/: lucia_single_gpu_cuda_flups.sbatch  lucia_single_gpu_cufft.sbatch  lucia_single_gpu_cufft_256.sbatch  lucia_single_node_cuda_flups.sbatch  lucia_single_node_cufftmp_64.sbatch  meluxina_single_node_cuda_flups.sbatch  meluxina_single_node_cufftmp.sbatch  run_local_benchmark_sweep.sh
src/: ava_taylor_green.cpp  ava_taylor_green.hpp  ava_taylor_green_impl.hpp  fftw_fft.cpp  fftw_fft.hpp  flups_fft.cpp  flups_fft.hpp  main.cpp  main_ava.cpp  spectral_solver.cpp  spectral_solver.hpp
